seaqt/QtGui/gen_qtextformat.h

typedef struct QBrush QBrush;
typedef struct QPen QPen;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextImageFormat QTextImageFormat;
typedef struct QTextLength QTextLength;
typedef struct QTextListFormat QTextListFormat;
typedef struct QTextTableFormat QTextTableFormat;
QTextCharFormat* QTextCharFormat_new();
QTextCharFormat* QTextCharFormat_new2(QTextCharFormat* param1);
void QTextCharFormat_setVerticalAlignment(QTextCharFormat* self, int alignment);
int QTextCharFormat_verticalAlignment(const QTextCharFormat* self);
void QTextCharFormat_setTextOutline(QTextCharFormat* self, QPen* pen);
QPen* QTextCharFormat_textOutline(const QTextCharFormat* self);
void QTextCharFormat_setToolTip(QTextCharFormat* self, struct miqt_string tip);
struct miqt_string QTextCharFormat_toolTip(const QTextCharFormat* self);
void QTextCharFormat_setAnchor(QTextCharFormat* self, bool anchor);
bool QTextCharFormat_isAnchor(const QTextCharFormat* self);
void QTextCharFormat_setAnchorHref(QTextCharFormat* self, struct miqt_string value);
struct miqt_string QTextCharFormat_anchorHref(const QTextCharFormat* self);
void QTextCharFormat_setAnchorName(QTextCharFormat* self, struct miqt_string name);
struct miqt_string QTextCharFormat_anchorName(const QTextCharFormat* self);
void QTextCharFormat_setAnchorNames(QTextCharFormat* self, struct miqt_array /* of struct miqt_string */  names);
struct miqt_array /* of struct miqt_string */  QTextCharFormat_anchorNames(const QTextCharFormat* self);
void QTextCharFormat_setTableCellRowSpan(QTextCharFormat* self, int tableCellRowSpan);
int QTextCharFormat_tableCellRowSpan(const QTextCharFormat* self);
void QTextCharFormat_setTableCellColumnSpan(QTextCharFormat* self, int tableCellColumnSpan);
int QTextCharFormat_tableCellColumnSpan(const QTextCharFormat* self);
void QTextCharFormat_setFontStyleHint2(QTextCharFormat* self, int hint, int strategy);
QTextBlockFormat* QTextBlockFormat_new();
QTextBlockFormat* QTextBlockFormat_new2(QTextBlockFormat* param1);
bool QTextBlockFormat_isValid(const QTextBlockFormat* self);
void QTextBlockFormat_setAlignment(QTextBlockFormat* self, int alignment);
int QTextBlockFormat_alignment(const QTextBlockFormat* self);
void QTextBlockFormat_setTopMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_topMargin(const QTextBlockFormat* self);
void QTextBlockFormat_setBottomMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_bottomMargin(const QTextBlockFormat* self);
void QTextBlockFormat_setLeftMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_leftMargin(const QTextBlockFormat* self);
void QTextBlockFormat_setRightMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_rightMargin(const QTextBlockFormat* self);
void QTextBlockFormat_setTextIndent(QTextBlockFormat* self, double aindent);
double QTextBlockFormat_textIndent(const QTextBlockFormat* self);
void QTextBlockFormat_setIndent(QTextBlockFormat* self, int indent);
int QTextBlockFormat_indent(const QTextBlockFormat* self);
void QTextBlockFormat_setHeadingLevel(QTextBlockFormat* self, int alevel);
int QTextBlockFormat_headingLevel(const QTextBlockFormat* self);
void QTextBlockFormat_setLineHeight(QTextBlockFormat* self, double height, int heightType);
double QTextBlockFormat_lineHeight(const QTextBlockFormat* self, double scriptLineHeight, double scaling);
double QTextBlockFormat_lineHeight2(const QTextBlockFormat* self);
int QTextBlockFormat_lineHeightType(const QTextBlockFormat* self);
void QTextBlockFormat_setNonBreakableLines(QTextBlockFormat* self, bool b);
bool QTextBlockFormat_nonBreakableLines(const QTextBlockFormat* self);
void QTextBlockFormat_setPageBreakPolicy(QTextBlockFormat* self, int flags);
int QTextBlockFormat_pageBreakPolicy(const QTextBlockFormat* self);
void QTextBlockFormat_setTabPositions(QTextBlockFormat* self, struct miqt_array /* of QTextOption__Tab* */  tabs);
struct miqt_array /* of QTextOption__Tab* */  QTextBlockFormat_tabPositions(const QTextBlockFormat* self);
void QTextBlockFormat_setMarker(QTextBlockFormat* self, int marker);
int QTextBlockFormat_marker(const QTextBlockFormat* self);
QTextListFormat* QTextListFormat_new();
QTextListFormat* QTextListFormat_new2(QTextListFormat* param1);
bool QTextListFormat_isValid(const QTextListFormat* self);
void QTextListFormat_setStyle(QTextListFormat* self, int style);
int QTextListFormat_style(const QTextListFormat* self);
void QTextListFormat_setIndent(QTextListFormat* self, int indent);
int QTextListFormat_indent(const QTextListFormat* self);
void QTextListFormat_setNumberPrefix(QTextListFormat* self, struct miqt_string numberPrefix);
struct miqt_string QTextListFormat_numberPrefix(const QTextListFormat* self);
void QTextListFormat_setNumberSuffix(QTextListFormat* self, struct miqt_string numberSuffix);
struct miqt_string QTextListFormat_numberSuffix(const QTextListFormat* self);
QTextImageFormat* QTextImageFormat_new();
bool QTextImageFormat_isValid(const QTextImageFormat* self);
void QTextImageFormat_setName(QTextImageFormat* self, struct miqt_string name);
struct miqt_string QTextImageFormat_name(const QTextImageFormat* self);
void QTextImageFormat_setWidth(QTextImageFormat* self, double width);
double QTextImageFormat_width(const QTextImageFormat* self);
void QTextImageFormat_setHeight(QTextImageFormat* self, double height);
double QTextImageFormat_height(const QTextImageFormat* self);
void QTextImageFormat_setQuality(QTextImageFormat* self);
int QTextImageFormat_quality(const QTextImageFormat* self);
void QTextImageFormat_setQuality1(QTextImageFormat* self, int quality);
QTextFrameFormat* QTextFrameFormat_new();
QTextFrameFormat* QTextFrameFormat_new2(QTextFrameFormat* param1);
bool QTextFrameFormat_isValid(const QTextFrameFormat* self);
void QTextFrameFormat_setPosition(QTextFrameFormat* self, int f);
int QTextFrameFormat_position(const QTextFrameFormat* self);
void QTextFrameFormat_setBorder(QTextFrameFormat* self, double border);
double QTextFrameFormat_border(const QTextFrameFormat* self);
void QTextFrameFormat_setBorderBrush(QTextFrameFormat* self, QBrush* brush);
QBrush* QTextFrameFormat_borderBrush(const QTextFrameFormat* self);
void QTextFrameFormat_setBorderStyle(QTextFrameFormat* self, int style);
int QTextFrameFormat_borderStyle(const QTextFrameFormat* self);
void QTextFrameFormat_setMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_margin(const QTextFrameFormat* self);
void QTextFrameFormat_setTopMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_topMargin(const QTextFrameFormat* self);
void QTextFrameFormat_setBottomMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_bottomMargin(const QTextFrameFormat* self);
void QTextFrameFormat_setLeftMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_leftMargin(const QTextFrameFormat* self);
void QTextFrameFormat_setRightMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_rightMargin(const QTextFrameFormat* self);
void QTextFrameFormat_setPadding(QTextFrameFormat* self, double padding);
double QTextFrameFormat_padding(const QTextFrameFormat* self);
void QTextFrameFormat_setWidth(QTextFrameFormat* self, double width);
void QTextFrameFormat_setWidthWithLength(QTextFrameFormat* self, QTextLength* length);
QTextLength* QTextFrameFormat_width(const QTextFrameFormat* self);
void QTextFrameFormat_setHeight(QTextFrameFormat* self, double height);
void QTextFrameFormat_setHeightWithHeight(QTextFrameFormat* self, QTextLength* height);
QTextLength* QTextFrameFormat_height(const QTextFrameFormat* self);
void QTextFrameFormat_setPageBreakPolicy(QTextFrameFormat* self, int flags);
int QTextFrameFormat_pageBreakPolicy(const QTextFrameFormat* self);
bool QTextTableFormat_isValid(const QTextTableFormat* self);
int QTextTableFormat_columns(const QTextTableFormat* self);
void QTextTableFormat_setColumns(QTextTableFormat* self, int columns);