seaqt/QtGui/gen_qtextformat.nim

proc fcQTextCharFormat_setVerticalAlignment(self: pointer, alignment: cint): void {.importc: "QTextCharFormat_setVerticalAlignment".}
proc fcQTextCharFormat_verticalAlignment(self: pointer): cint {.importc: "QTextCharFormat_verticalAlignment".}
proc fcQTextCharFormat_setTextOutline(self: pointer, pen: pointer): void {.importc: "QTextCharFormat_setTextOutline".}
proc fcQTextCharFormat_textOutline(self: pointer): pointer {.importc: "QTextCharFormat_textOutline".}
proc fcQTextCharFormat_setToolTip(self: pointer, tip: struct_miqt_string): void {.importc: "QTextCharFormat_setToolTip".}
proc fcQTextCharFormat_toolTip(self: pointer): struct_miqt_string {.importc: "QTextCharFormat_toolTip".}
proc fcQTextCharFormat_setAnchor(self: pointer, anchor: bool): void {.importc: "QTextCharFormat_setAnchor".}
proc fcQTextCharFormat_isAnchor(self: pointer): bool {.importc: "QTextCharFormat_isAnchor".}
proc fcQTextCharFormat_setAnchorHref(self: pointer, value: struct_miqt_string): void {.importc: "QTextCharFormat_setAnchorHref".}
proc fcQTextCharFormat_anchorHref(self: pointer): struct_miqt_string {.importc: "QTextCharFormat_anchorHref".}
proc fcQTextCharFormat_setAnchorName(self: pointer, name: struct_miqt_string): void {.importc: "QTextCharFormat_setAnchorName".}
proc fcQTextCharFormat_anchorName(self: pointer): struct_miqt_string {.importc: "QTextCharFormat_anchorName".}
proc fcQTextCharFormat_setAnchorNames(self: pointer, names: struct_miqt_array): void {.importc: "QTextCharFormat_setAnchorNames".}
proc fcQTextCharFormat_anchorNames(self: pointer): struct_miqt_array {.importc: "QTextCharFormat_anchorNames".}
proc fcQTextCharFormat_setTableCellRowSpan(self: pointer, tableCellRowSpan: cint): void {.importc: "QTextCharFormat_setTableCellRowSpan".}
proc fcQTextCharFormat_tableCellRowSpan(self: pointer): cint {.importc: "QTextCharFormat_tableCellRowSpan".}
proc fcQTextCharFormat_setTableCellColumnSpan(self: pointer, tableCellColumnSpan: cint): void {.importc: "QTextCharFormat_setTableCellColumnSpan".}
proc fcQTextCharFormat_tableCellColumnSpan(self: pointer): cint {.importc: "QTextCharFormat_tableCellColumnSpan".}
proc fcQTextCharFormat_setFontStyleHint2(self: pointer, hint: cint, strategy: cint): void {.importc: "QTextCharFormat_setFontStyleHint2".}
proc fcQTextCharFormat_new(): ptr cQTextCharFormat {.importc: "QTextCharFormat_new".}
proc fcQTextCharFormat_new2(param1: pointer): ptr cQTextCharFormat {.importc: "QTextCharFormat_new2".}
proc fcQTextBlockFormat_isValid(self: pointer): bool {.importc: "QTextBlockFormat_isValid".}
proc fcQTextBlockFormat_setAlignment(self: pointer, alignment: cint): void {.importc: "QTextBlockFormat_setAlignment".}
proc fcQTextBlockFormat_alignment(self: pointer): cint {.importc: "QTextBlockFormat_alignment".}
proc fcQTextBlockFormat_setTopMargin(self: pointer, margin: float64): void {.importc: "QTextBlockFormat_setTopMargin".}
proc fcQTextBlockFormat_topMargin(self: pointer): float64 {.importc: "QTextBlockFormat_topMargin".}
proc fcQTextBlockFormat_setBottomMargin(self: pointer, margin: float64): void {.importc: "QTextBlockFormat_setBottomMargin".}
proc fcQTextBlockFormat_bottomMargin(self: pointer): float64 {.importc: "QTextBlockFormat_bottomMargin".}
proc fcQTextBlockFormat_setLeftMargin(self: pointer, margin: float64): void {.importc: "QTextBlockFormat_setLeftMargin".}
proc fcQTextBlockFormat_leftMargin(self: pointer): float64 {.importc: "QTextBlockFormat_leftMargin".}
proc fcQTextBlockFormat_setRightMargin(self: pointer, margin: float64): void {.importc: "QTextBlockFormat_setRightMargin".}
proc fcQTextBlockFormat_rightMargin(self: pointer): float64 {.importc: "QTextBlockFormat_rightMargin".}
proc fcQTextBlockFormat_setTextIndent(self: pointer, aindent: float64): void {.importc: "QTextBlockFormat_setTextIndent".}
proc fcQTextBlockFormat_textIndent(self: pointer): float64 {.importc: "QTextBlockFormat_textIndent".}
proc fcQTextBlockFormat_setIndent(self: pointer, indent: cint): void {.importc: "QTextBlockFormat_setIndent".}
proc fcQTextBlockFormat_indent(self: pointer): cint {.importc: "QTextBlockFormat_indent".}
proc fcQTextBlockFormat_setHeadingLevel(self: pointer, alevel: cint): void {.importc: "QTextBlockFormat_setHeadingLevel".}
proc fcQTextBlockFormat_headingLevel(self: pointer): cint {.importc: "QTextBlockFormat_headingLevel".}
proc fcQTextBlockFormat_setLineHeight(self: pointer, height: float64, heightType: cint): void {.importc: "QTextBlockFormat_setLineHeight".}
proc fcQTextBlockFormat_lineHeight(self: pointer, scriptLineHeight: float64, scaling: float64): float64 {.importc: "QTextBlockFormat_lineHeight".}
proc fcQTextBlockFormat_lineHeight2(self: pointer): float64 {.importc: "QTextBlockFormat_lineHeight2".}
proc fcQTextBlockFormat_lineHeightType(self: pointer): cint {.importc: "QTextBlockFormat_lineHeightType".}
proc fcQTextBlockFormat_setNonBreakableLines(self: pointer, b: bool): void {.importc: "QTextBlockFormat_setNonBreakableLines".}
proc fcQTextBlockFormat_nonBreakableLines(self: pointer): bool {.importc: "QTextBlockFormat_nonBreakableLines".}
proc fcQTextBlockFormat_setPageBreakPolicy(self: pointer, flags: cint): void {.importc: "QTextBlockFormat_setPageBreakPolicy".}
proc fcQTextBlockFormat_pageBreakPolicy(self: pointer): cint {.importc: "QTextBlockFormat_pageBreakPolicy".}
proc fcQTextBlockFormat_setTabPositions(self: pointer, tabs: struct_miqt_array): void {.importc: "QTextBlockFormat_setTabPositions".}
proc fcQTextBlockFormat_tabPositions(self: pointer): struct_miqt_array {.importc: "QTextBlockFormat_tabPositions".}
proc fcQTextBlockFormat_setMarker(self: pointer, marker: cint): void {.importc: "QTextBlockFormat_setMarker".}
proc fcQTextBlockFormat_marker(self: pointer): cint {.importc: "QTextBlockFormat_marker".}
proc fcQTextBlockFormat_new(): ptr cQTextBlockFormat {.importc: "QTextBlockFormat_new".}
proc fcQTextBlockFormat_new2(param1: pointer): ptr cQTextBlockFormat {.importc: "QTextBlockFormat_new2".}
proc fcQTextListFormat_isValid(self: pointer): bool {.importc: "QTextListFormat_isValid".}
proc fcQTextListFormat_setStyle(self: pointer, style: cint): void {.importc: "QTextListFormat_setStyle".}
proc fcQTextListFormat_style(self: pointer): cint {.importc: "QTextListFormat_style".}
proc fcQTextListFormat_setIndent(self: pointer, indent: cint): void {.importc: "QTextListFormat_setIndent".}
proc fcQTextListFormat_indent(self: pointer): cint {.importc: "QTextListFormat_indent".}
proc fcQTextListFormat_setNumberPrefix(self: pointer, numberPrefix: struct_miqt_string): void {.importc: "QTextListFormat_setNumberPrefix".}
proc fcQTextListFormat_numberPrefix(self: pointer): struct_miqt_string {.importc: "QTextListFormat_numberPrefix".}
proc fcQTextListFormat_setNumberSuffix(self: pointer, numberSuffix: struct_miqt_string): void {.importc: "QTextListFormat_setNumberSuffix".}
proc fcQTextListFormat_numberSuffix(self: pointer): struct_miqt_string {.importc: "QTextListFormat_numberSuffix".}
proc fcQTextListFormat_new(): ptr cQTextListFormat {.importc: "QTextListFormat_new".}
proc fcQTextListFormat_new2(param1: pointer): ptr cQTextListFormat {.importc: "QTextListFormat_new2".}
proc fcQTextImageFormat_isValid(self: pointer): bool {.importc: "QTextImageFormat_isValid".}
proc fcQTextImageFormat_setName(self: pointer, name: struct_miqt_string): void {.importc: "QTextImageFormat_setName".}
proc fcQTextImageFormat_name(self: pointer): struct_miqt_string {.importc: "QTextImageFormat_name".}
proc fcQTextImageFormat_setWidth(self: pointer, width: float64): void {.importc: "QTextImageFormat_setWidth".}
proc fcQTextImageFormat_width(self: pointer): float64 {.importc: "QTextImageFormat_width".}
proc fcQTextImageFormat_setHeight(self: pointer, height: float64): void {.importc: "QTextImageFormat_setHeight".}
proc fcQTextImageFormat_height(self: pointer): float64 {.importc: "QTextImageFormat_height".}
proc fcQTextImageFormat_setQuality(self: pointer): void {.importc: "QTextImageFormat_setQuality".}
proc fcQTextImageFormat_quality(self: pointer): cint {.importc: "QTextImageFormat_quality".}
proc fcQTextImageFormat_setQuality1(self: pointer, quality: cint): void {.importc: "QTextImageFormat_setQuality1".}
proc fcQTextImageFormat_new(): ptr cQTextImageFormat {.importc: "QTextImageFormat_new".}
proc fcQTextFrameFormat_isValid(self: pointer): bool {.importc: "QTextFrameFormat_isValid".}
proc fcQTextFrameFormat_setPosition(self: pointer, f: cint): void {.importc: "QTextFrameFormat_setPosition".}
proc fcQTextFrameFormat_position(self: pointer): cint {.importc: "QTextFrameFormat_position".}
proc fcQTextFrameFormat_setBorder(self: pointer, border: float64): void {.importc: "QTextFrameFormat_setBorder".}
proc fcQTextFrameFormat_border(self: pointer): float64 {.importc: "QTextFrameFormat_border".}
proc fcQTextFrameFormat_setBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextFrameFormat_setBorderBrush".}
proc fcQTextFrameFormat_borderBrush(self: pointer): pointer {.importc: "QTextFrameFormat_borderBrush".}
proc fcQTextFrameFormat_setBorderStyle(self: pointer, style: cint): void {.importc: "QTextFrameFormat_setBorderStyle".}
proc fcQTextFrameFormat_borderStyle(self: pointer): cint {.importc: "QTextFrameFormat_borderStyle".}
proc fcQTextFrameFormat_setMargin(self: pointer, margin: float64): void {.importc: "QTextFrameFormat_setMargin".}
proc fcQTextFrameFormat_margin(self: pointer): float64 {.importc: "QTextFrameFormat_margin".}
proc fcQTextFrameFormat_setTopMargin(self: pointer, margin: float64): void {.importc: "QTextFrameFormat_setTopMargin".}
proc fcQTextFrameFormat_topMargin(self: pointer): float64 {.importc: "QTextFrameFormat_topMargin".}
proc fcQTextFrameFormat_setBottomMargin(self: pointer, margin: float64): void {.importc: "QTextFrameFormat_setBottomMargin".}
proc fcQTextFrameFormat_bottomMargin(self: pointer): float64 {.importc: "QTextFrameFormat_bottomMargin".}
proc fcQTextFrameFormat_setLeftMargin(self: pointer, margin: float64): void {.importc: "QTextFrameFormat_setLeftMargin".}
proc fcQTextFrameFormat_leftMargin(self: pointer): float64 {.importc: "QTextFrameFormat_leftMargin".}
proc fcQTextFrameFormat_setRightMargin(self: pointer, margin: float64): void {.importc: "QTextFrameFormat_setRightMargin".}
proc fcQTextFrameFormat_rightMargin(self: pointer): float64 {.importc: "QTextFrameFormat_rightMargin".}
proc fcQTextFrameFormat_setPadding(self: pointer, padding: float64): void {.importc: "QTextFrameFormat_setPadding".}
proc fcQTextFrameFormat_padding(self: pointer): float64 {.importc: "QTextFrameFormat_padding".}
proc fcQTextFrameFormat_setWidth(self: pointer, width: float64): void {.importc: "QTextFrameFormat_setWidth".}
proc fcQTextFrameFormat_setWidthWithLength(self: pointer, length: pointer): void {.importc: "QTextFrameFormat_setWidthWithLength".}
proc fcQTextFrameFormat_width(self: pointer): pointer {.importc: "QTextFrameFormat_width".}
proc fcQTextFrameFormat_setHeight(self: pointer, height: float64): void {.importc: "QTextFrameFormat_setHeight".}
proc fcQTextFrameFormat_setHeightWithHeight(self: pointer, height: pointer): void {.importc: "QTextFrameFormat_setHeightWithHeight".}
proc fcQTextFrameFormat_height(self: pointer): pointer {.importc: "QTextFrameFormat_height".}
proc fcQTextFrameFormat_setPageBreakPolicy(self: pointer, flags: cint): void {.importc: "QTextFrameFormat_setPageBreakPolicy".}
proc fcQTextFrameFormat_pageBreakPolicy(self: pointer): cint {.importc: "QTextFrameFormat_pageBreakPolicy".}
proc fcQTextFrameFormat_new(): ptr cQTextFrameFormat {.importc: "QTextFrameFormat_new".}
proc fcQTextFrameFormat_new2(param1: pointer): ptr cQTextFrameFormat {.importc: "QTextFrameFormat_new2".}
proc fcQTextTableFormat_isValid(self: pointer): bool {.importc: "QTextTableFormat_isValid".}
proc fcQTextTableFormat_columns(self: pointer): cint {.importc: "QTextTableFormat_columns".}
proc fcQTextTableFormat_setColumns(self: pointer, columns: cint): void {.importc: "QTextTableFormat_setColumns".}
